# FDSLabs

Ind1/: CMakeLists.txt  Solver.cpp  Solver.h  main.cpp
Ind1/.PVS-Studio/: depend_info.json
Ind1/IntegrationMethod/: IIntegrateMethod.cpp  IIntegrateMethod.h  RectangleIntegration.cpp  RectangleIntegration.h  RectangleIntegrationNoParralel.cpp  RectangleIntegrationNoParralel.h
Ind2/: CMakeLists.txt  Dockerfile  main.cpp
Ind2/.PVS-Studio/: depend_info.json
Task1/: CMakeLists.txt  Dockerfile  main.cpp
Task1/.PVS-Studio/: depend_info.json
Task2/: CMakeLists.txt  Dockerfile  main.cpp
Task2/.PVS-Studio/: depend_info.json
Task3/: CMakeLists.txt  Dockerfile  main.cpp
Task3/.PVS-Studio/: depend_info.json
Task3/Queue/: Queue.h  Queue.tpp
Task4/: CMakeLists.txt  Dockerfile  main.cpp
Task4/.PVS-Studio/: depend_info.json
Task5/: CMakeLists.txt  Dockerfile  main.cpp
Task5/.PVS-Studio/: depend_info.json
Task6/: CMakeLists.txt  Dockerfile  main.cpp
Task6/.PVS-Studio/: depend_info.json
